[package]
name = "enum-helper-macros"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/marioiordanov/enum-helper-macros"
description = "Helper macros for working with enums"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
darling = "0.20.10"
